@@ -1,3 +1,5 @@
+.\"	$NetBSD: rogue.me,v 1.2 1995/04/22 10:28:50 cgd Exp $
+.\"
 .\" Copyright (c) 1986, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
